--- a/public/modules/view/client/client.html
+++ b/public/modules/view/client/client.html
@@ -11,18 +11,15 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-    <title>Dashboard</title>
+    <title>Clients</title>
 </head>
-
 <body class="bg-light">
-      <div id="navbar-container"></div>
-
-<main>
-    
-    <div class="container-fluid">
+     <div id="navbar-container"></div>
+     <main>
+        <div class="container-fluid">
         
         <!-- Card at the very top, gives us valuable information -->
-        <div class="row mb-4">
+        <!-- <div class="row mb-4">
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="card shadow-sm border-0 h-100 card-total">
                     <div class="card-body d-flex align-items-center">
@@ -78,7 +75,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- End of card sliders at the top -->
 
@@ -88,10 +85,10 @@
             <div class="card-body p-4">
                 <div class="row align-items-center mb-4">
                     <div class="col-6">
-                        <h4 class="mb-0 fw-bold">Search Engine | Payments</h4>
+                        <h4 class="mb-0 fw-bold">Search Engine | Clients</h4>
                     </div>
                     <div class="col-6 text-end">
-                        <button type="button" class="btn btn-success">Create Payment <i class="fas fa-plus"></i></button>
+                        <button type="button" class="btn btn-success">Create Client <i class="fas fa-plus"></i></button>
                     </div>
                 </div>
 
@@ -144,155 +141,156 @@
                         <thead>
                             <tr>
                                 <th scope="col"></i> ID</th>
-                                <th scope="col"></i> Request by</th>
-                                <th scope="col">Subject</th>
-                                <th scope="col"></i> Priority</th>
+                                <th scope="col"></i> Name</th>
+                                <th scope="col">Email</th>
                                 <th scope="col">Status</th>
-                                <th scope="col">Create Date</th>
+                                <th scope="col">Land</th>
                                 <th scope="col">Due Date</th>
                                 <th scope="col">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>#96765</td>
+                                <td>#1</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Jose D.
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Florentino Monjaráz G.
                                 </td>
-                                <td>Support for theme</td>
-                                <td><span class="priority-badge priority-medium">Medium</span></td>
-                                <td><span class="status-badge status-open">Open</span></td>
-                                <td>01/01/2021</td>
+                                <td>floren33monjar@gmail.com</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 5-A Mz 1</td>
                                 <td>01/02/2021</td>
                                 <td>
-                                    <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                    <div class="col-12">
+                                        <a href="edit-profile.html?id=123" class="btn btn-outline-secondary mb-0">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                        <a type="button"href="edit-profile.html?id=123" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></a>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
                             
                             <tr>
-                                <td>#96767</td>
+                                <td>#2</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> E. Brown
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/195.jpeg" alt="Avatar" class="table-avatar me-2"> E. Brown
                                 </td>
-                                <td>Your application received</td>
-                                <td><span class="priority-badge priority-low">Low</span></td>
-                                <td><span class="status-badge status-closed">Closed</span></td>
-                                <td>01/02/2021</td>
+                                <td>adrian123@hotmail.com</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 3-B Mz 2</td>
                                 <td>05/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
 
                             <tr>
-                                <td>#96770</td>
+                                <td>#3</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Gerora
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/291.jpeg" alt="Avatar" class="table-avatar me-2"> Gerora
                                 </td>
-                                <td>Verify your email</td>
-                                <td><span class="priority-badge priority-high">High</span></td>
-                                <td><span class="status-badge status-open">Open</span></td>
-                                <td>11/02/2021</td>
+                                <td>gerora@gmail.com</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 4-A Mz 1</td>
                                 <td>14/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
 
                             <tr>
-                                <td>#96772</td>
+                                <td>#4</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Karen Lian
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/587.jpeg" alt="Avatar" class="table-avatar me-2"> Karen Lian
                                 </td>
-                                <td>Support for theme</td>
-                                <td><span class="priority-badge priority-medium">Medium</span></td>
-                                <td><span class="status-badge status-open">Open</span></td>
-                                <td>11/02/2021</td>
+                                <td>KarenD4@hotmail.com</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 6-R Mz 6</td>
                                 <td>15/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
                             
                             <tr>
-                                <td>#96785</td>
+                                <td>#5</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Mark diaz
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/128.jpeg" alt="Avatar" class="table-avatar me-2"> Mark diaz
                                 </td>
-                                <td>Calling for help</td>
-                                <td><span class="priority-badge priority-high">High</span></td>
-                                <td><span class="status-badge status-closed">Closed</span></td>
-                                <td>12/02/2021</td>
+                                <td>markSander@jw.pub.org</td>
+                                <td><span class="status-badge status-closed">Pending</span></td>
+                                <td>Lote 5-F Mz 3</td>
                                 <td>19/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
                             
                             <tr>
-                                <td>#96790</td>
+                                <td>#6</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Josjues D.
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/96.jpeg" alt="Avatar" class="table-avatar me-2"> Josjues D.
                                 </td>
-                                <td>Management</td>
-                                <td><span class="priority-badge priority-low">Low</span></td>
-                                <td><span class="status-badge status-closed">Closed</span></td>
-                                <td>13/02/2021</td>
+                                <td>Josuediaz4@hotmail.com</td>
+                                <td><span class="status-badge status-closed">Pending</span></td>
+                                <td>Lote 5-B Mz 1</td>
                                 <td>20/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
                             
                             <tr>
-                                <td>#96799</td>
+                                <td>#7</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Phylia Maciel
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Avatar" class="table-avatar me-2"> Phylia Maciel
                                 </td>
                                 <td>Support for theme</td>
-                                <td><span class="priority-badge priority-low">Low</span></td>
-                                <td><span class="status-badge status-open">Open</span></td>
-                                <td>15/02/2021</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 1-C Mz 1</td>
                                 <td>22/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
                             </tr>
                             
                             <tr>
-                                <td>#98812</td>
+                                <td>#8</td>
                                 <td>
-                                    <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Mark john D.
+                                    <img src="https://rickandmortyapi.com/api/character/avatar/3.jpeg" alt="Avatar" class="table-avatar me-2"> Mark john D.
                                 </td>
                                 <td>Verify your email</td>
-                                <td><span class="priority-badge priority-medium">Medium</span></td>
-                                <td><span class="status-badge status-closed">Closed</span></td>
-                                <td>16/02/2021</td>
+                                <td><span class="status-badge status-open">Active</span></td>
+                                <td>Lote 2-A Mz 4</td>
                                 <td>23/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-edit"></i></i></i></button>
+                                        <button type="button" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></button>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
@@ -330,6 +328,6 @@
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-
+     </main>
 </body>
 </html>
