--- a/public/modules/view/client/client.html
+++ b/public/modules/view/client/client.html
@@ -7,10 +7,7 @@
     <!-- CDN for fontawesome.. Still have to download it to not get a call everytime -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript" src="/app.js" defer></script>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <title>Clients</title>
 </head>
 <body class="bg-light">
@@ -161,10 +158,10 @@
                                 <td>01/02/2021</td>
                                 <td>
                                     <div class="col-12">
-                                        <a href="edit-profile.html?id=123" class="btn btn-outline-secondary mb-0">
+                                        <a href="details_client.html?id=123" class="btn btn-outline-secondary mb-0">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <a type="button"href="edit-profile.html?id=123" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></a>
+                                        <a href="details_client.html?id=123" class="btn btn-outline-warning mb-0"><i class="fas fa-user-cog"></i></a>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
